--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 </head>
 <body>
 <section id="header">
-    <div class="container">
         <nav>
             <div class="logo">
-                <img src="./img/css.jpg" alt="">
+                <img src="./img/logo.png" alt="">
             </div>
             <ul class="list-items">
                 <li class="list-item"><a href="">Home</a></li>
@@ -25,15 +24,15 @@
                 <li class="list-item"><a href="">tutorials</a></li>
                 <li class="list-item"><a href="">Contacts</a></li>
             </ul>
-            <ul>
+            <ul class="social">
                 <li class="icon-facebook"></li>
                 <li class="icon-twitter"></li>
-                <li class="icon-skype"></li>
-                <li class="icon-"></li>
+                <li class="icon-skype-outline"></li>
+                <li class="icon-linkedin"></li>
             </ul>
         </nav>
         <span></span>
-    </div>
+
 </section>>
 <section id="home">
     <div class="header-content">
@@ -85,8 +84,7 @@
 </section>
 <section id="colum">
     <div class="colum-item">
-    <div class="container">
-        <div class="row">
+        <div class="row no-gutters">
             <div class="col-lg-6">
                 <div class="doc">
                 <p>data type</p>
@@ -109,12 +107,12 @@
             </div>
         </div>
     </div>
-    </div>
 </section>
 <section id="blog-b">
-    <div class="container">
-        <div class="blog-title">lets blog</div>
-        <i>we love clean desing and advanced digital salutions.</i>
+        <div class="blog-title">
+            <p>lets blog</p>
+                <i>we love clean desing and advanced digital salutions.</i>
+        </div>
         <div class="row">
             <div class="col-lg-3">
                 <div class="blog-item">
@@ -150,7 +148,6 @@
                 </div>
             </div>
         </div>
-    </div>
 </section>
 <section id="blu">
     <div class="container">
@@ -234,10 +231,10 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="allrirht">
+            <div class="col-lg-6">
                 <p>©2016 PSDfreebies.com - All Right Reserved</p>
             </div>
-            <div class="designby">
+            <div class="col-lg-6">
                 <img src="./img/footer.png" alt="">
             </div>
         </div>
