--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/fontello.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
     <title>Document</title>
 </head>
 <body>
@@ -16,6 +17,7 @@
             <div class="logo">
                 <img src="./img/logo.png" alt="">
             </div>
+            <div class="mobil-menu">
             <ul class="list-items">
                 <li class="list-item"><a href="">Home</a></li>
                 <li class="list-item"><a href="">pages</a></li>
@@ -30,8 +32,11 @@
                 <li class="icon-skype-outline"></li>
                 <li class="icon-linkedin"></li>
             </ul>
+            <span></span>
+            </div>
         </nav>
-        <span></span>
+
+
 
 </section>>
 <section id="home">
@@ -48,7 +53,9 @@
         <div class="row">
             <div class="col-lg-3">
                 <div class="team-item">
+                    <div class="border-blu">
                     <img src="./img/icon-write.png" alt="">
+                    </div>
                     <p>Aenean lacinia bibendum nulla sed
                     consectietur.Vivamus sagitis lacus
                         velaugue laoreet rutrum faucibus
@@ -57,7 +64,9 @@
             </div>
             <div class="col-lg-3">
                 <div class="team-item">
+                    <div class="border-blu">
                     <img src="./img/icon-write%20(1).png" alt="">
+                    </div>
                     <p>Aenean lacinia bibendum nulla sed
                         consectietur.Vivamus sagitis lacus
                         velaugue laoreet rutrum faucibus</p>
@@ -65,7 +74,9 @@
             </div>
             <div class="col-lg-3">
                 <div class="team-item" >
-                    <img src="./img/icon-write%20(1).png" alt="">
+                    <div class="border-blu">
+                        <img src="./img/icon-write%20(1).png" alt="">
+                    </div>
                     <p>Aenean lacinia bibendum nulla sed
                         consectietur.Vivamus sagitis lacus
                         velaugue laoreet rutrum faucibus</p>
@@ -73,7 +84,9 @@
             </div>
             <div class="col-lg-3">
                 <div class="team-item">
-                    <a href=""><img src="./img/icon-write.png" alt=""></a>
+                        <div class="border-blu">
+                        <img src="./img/icon-write.png" alt="">
+                        </div>
                     <p>Aenean lacinia bibendum nulla sed
                         consectietur.Vivamus sagitis lacus
                         velaugue laoreet rutrum faucibus</p>
@@ -171,11 +184,13 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
+                <div class="akita-title">
                 <strong>akita inu dog</strong>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus earum eveniet quaerat. Dolorem id illum quod sint.</p>
             <h3 class="top">fully responsive desing</h3>
             <h3 class="meedle">high quality code</h3>
             <h3 class="bottom">different headers & layout</h3>
+            </div>
             </div>
             <div class="col-lg-6"><img src="./img/phone.png" alt=""></div>
         </div>
@@ -240,5 +255,28 @@
         </div>
     </div>
 </footer>
+<section id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2>wed love to hear about your project.</h2>
+                <img src="./img/c.png" alt="">
+            </div>
+            <form>
+                <div class="row">
+                    <div class="col">
+                        <input type="text" class="form-control" placeholder="First name">
+                    </div>
+                    <div class="col">
+                        <input type="text" class="form-control" placeholder="Last name">
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="row"></div>
+    </div>
+</section>
+<script src="js/jquery.js"></script>
+<script src="js/js.js"></script>
 </body>
 </html>
