--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <li class="list-item"><a href="">Contacts</a></li>
             </ul>
             <ul class="social">
-                <li class="icon-facebook"></li>
-                <li class="icon-twitter"></li>
-                <li class="icon-skype-outline"></li>
-                <li class="icon-linkedin"></li>
+                <a href=""><li class="icon-facebook"></li></a>
+                <a href=""><li class="icon-twitter"></li></a>
+                <a href=""><li class="icon-skype-outline"></li></a>
+                <a href=""><li class="icon-linkedin"></li></a>
             </ul>
             <span></span>
             </div>
@@ -50,6 +50,7 @@
 <section id="team">
     <div class="container">
         <div class="section-title">we are awesome agency</div>
+        <div class="w-word"><img src="./img/W.png" alt=""></div>
         <div class="row">
             <div class="col-lg-3">
                 <div class="team-item">
@@ -130,6 +131,7 @@
             <div class="col-lg-3">
                 <div class="blog-item">
                     <img src="./img/img-blog1.png" alt="">
+                    <h4>fresh summer campaign</h4>
                     <p>Aenean lacinia bibendum nulla sed
                         consectietur.Vivamus sagitis lacus
                         velaugue laoreet rutrum faucibus
@@ -139,6 +141,7 @@
             <div class="col-lg-3">
                 <div class="blog-item">
                     <img src="./img/img-blog2.png" alt="">
+                    <h4>fresh summer campaign</h4>
                     <p>Aenean lacinia bibendum nulla sed
                         consectietur.Vivamus sagitis lacus
                         velaugue laoreet rutrum faucibus</p>
@@ -147,6 +150,7 @@
             <div class="col-lg-3">
                 <div class="blog-item" >
                     <img src="./img/img-blog3.png" alt="">
+                    <h4>fresh summer campaign</h4>
                     <p>Aenean lacinia bibendum nulla sed
                         consectietur.Vivamus sagitis lacus
                         velaugue laoreet rutrum faucibus</p>
@@ -154,7 +158,8 @@
             </div>
             <div class="col-lg-3">
                 <div class="blog-item">
-                    <a href=""><img src="./img/img-blog1.png" alt=""></a>
+                    <img src="./img/img-blog1.png" alt="">
+                    <h4>fresh summer campaign</h4>
                     <p>Aenean lacinia bibendum nulla sed
                         consectietur.Vivamus sagitis lacus
                         velaugue laoreet rutrum faucibus</p>
@@ -241,7 +246,7 @@
     </div>
 </section>
 <section id="map">
-<div class="container"></div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d194347.38440441774!2d-3.819622737866014!3d40.438131081767274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422997800a3c81%3A0xc436dec1618c2269!2z0JzQsNC00YDQuNC0LCDQmNGB0L_QsNC90LjRjw!5e0!3m2!1sru!2skg!4v1574093228748!5m2!1sru!2skg" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 </section>
 <footer>
     <div class="container">
